debian: add python3-networkmanager and python3-dbus to depends
Signed-off-by: Bardia Moshiri <fakeshell@bardia.tech>

--- a/debian/control
+++ b/debian/control
@@ -18,5 +18,7 @@ Depends: ${misc:Depends},
 	 modemmanager,
 	 geoclue-2.0,
 	 gir1.2-geoclue-2.0,
-         gir1.2-modemmanager-1.0
+         gir1.2-modemmanager-1.0,
+         python3-networkmanager,
+         python3-dbus
 Description: A simple python script implementing ModemManager DBus API and using ofono to manage the modem
